# tdew_estimation

./: .gitignore  PAPER_PLAN.md  README.md  TDEW_Avance_Parcial_typst.qmd  code_from_colab.md  main.py  pram_appendix.qmd  pyproject.toml  references.bib  tdew_estimation_arimax.py  tdew_estimation_overview.docx  tdew_estimation_overview.html  tdew_estimation_overview.qmd  tdew_estimation_pram.qmd  tdew_estimation_pram_es.qmd  typst-preamble.typ
HPC_code/: README.md  RUNBOOK.md  __init__.py  _synth.py  analyze_gpu.py  analyze_scaling.py  benchmark_gpu_kernel.py  benchmark_gpu_pipeline.py  benchmark_scaling.py  compare_datasets.py  evaluate_accuracy.py  gpu_train.py  hpc.py  make_subset.py  nc_to_point_parquet.py  prep_inputs.py  requirements-gpu.txt  run_training_hpc.py
HPC_code/sbatch/: bench_cpu_family.sbatch  download_data.sh  prep_inputs.sbatch  train_cpu.sbatch  train_gpu_a100.sbatch
HPC_code/tests/: test_benchmark_smoke.py  test_compare_datasets_smoke.py  test_evaluate_accuracy_smoke.py  test_gpu_equiv.py  test_gpu_kernel_bench_smoke.py  test_gpu_pipeline_bench_smoke.py  test_gpu_runner_smoke.py  test_make_subset_smoke.py  test_nc_to_point_parquet_smoke.py  test_prep_inputs_smoke.py
HPC_code_tunning/: README.md  __init__.py  assemble_generic.py  backtest.py  effect_sizes.py  feature_spec.py  forecast_zoned.py  loyocv.py  manifest.py  run_tuning_hpc.py  select_backtest.py  selection.py  train_zoned.py  zones.py
HPC_code_tunning/tests/: test_assemble_generic_equiv.py  test_forecast_zoned.py  test_loyocv_math.py  test_selection_smoke.py  test_train_zoned_e2e.py  test_zone_mask_solve.py
Local/: run_pipeline.sh
presentations/: .gitignore  custom.scss  tdew_avance_es.qmd
reports/: .gitignore  README.md  TDEW_Avance_Parcial.qmd  tdew_hpc_report_en.qmd  tdew_hpc_report_es.qmd
reports/figs/: make_cpu_vs_gpu_per_id.py
reports/results/: accuracy_v11_v12.md  compare_v11_v12.md  cpu_family_tables.md  gpu_report.md
scripts/: run_pipeline.sh
tdew_estimation/: __init__.py  anomaly_dask.py  anomaly_train.py  bucket_layout.py  bucketed_data.py  checks.py  climatology.py  forecast.py  grid.py  incomplete_models.py  parquet_io.py  patch_coeffs.py
