[project]
name = "tdew-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.12.0",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=20.0.0",
    "rasterio>=1.4.4",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]
