[project]
name = "tdew-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask-cuda>=0.18.0",
    "dask-jobqueue>=0.9.0",
    "dask[distributed]>=2025.12.0",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=20.0.0",
    "rasterio>=1.4.4",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Multi-node CPU scaling on SLURM. GPU/RAPIDS deps are Linux+CUDA only and live in
# HPC_code/requirements-gpu.txt (installed from the NVIDIA PyPI index).
hpc = [
    "dask-jobqueue>=0.8.5",
]
# D4 scaling-benchmark analysis/plots (matplotlib only; CPU, no RAPIDS).
benchmark = [
    "matplotlib>=3.8",
]

[tool.ty.environment]
python = ".venv"
