[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tdew-estimation"
version = "0.1.0"
description = "Bucket-year anomaly local-linear-regression pipeline for daily dewpoint (TDEW) estimation."
readme = "README.md"
requires-python = ">=3.11"
# Core: the algorithm + the bucketed CPU runners. Light, CPU-only, installs everywhere.
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1",
    "pyarrow>=15",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "dask[distributed]>=2024.1",
]

[project.optional-dependencies]
# Multi-node CPU scaling on SLURM (dask-jobqueue spawns the worker fleet).
hpc = [
    "dask-jobqueue>=0.8.5",
]
# Scaling-benchmark analysis/plots (matplotlib only).
benchmark = [
    "matplotlib>=3.8",
]
# Single-GPU training/benchmark (the D3 batched-WLS kernel). CUDA 12.x wheel from PyPI.
gpu = [
    "cupy-cuda12x>=12",
]
# .nc -> point-parquet extraction (PISCO download pipeline): xarray/netCDF4 for the rasters,
# geopandas/rasterio for the potato-grid shapefile sampling. Not needed to train/benchmark.
netcdf = [
    "xarray>=2024.0",
    "netCDF4>=1.6",
    "geopandas>=1.0",
    "rasterio>=1.3",
]
# Future multi-GPU (dask-cuda / RAPIDS — Linux+CUDA only, NVIDIA index). Not used for one GPU.
multigpu = [
    "dask-cuda>=0.18.0",
]

# Only the algorithm package is installable; HPC_code/ and Local/ are run as scripts.
[tool.setuptools]
packages = ["tdew_estimation"]

[tool.ty.environment]
python = ".venv"
